--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "accessibility-rule-testing",
   "version": "0.1.0",
+  "homepage": "https://jayquake.github.io/audit-rules/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
