--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dompurify": "^3.2.3",
     "framer-motion": "^11.15.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.6",
     "react-code-section-lib": "^0.1.2",
