--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "dompurify": "^3.2.3",
     "framer-motion": "^11.15.0",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.6",
     "react-code-section-lib": "^0.1.2",
