--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,38 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     
+    - name: Debug GH_TOKEN
+      shell: bash
+      run: |
+        echo "🔍 Checking GH_TOKEN..."
+        GH_TOKEN_VALUE="${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}"
+        if [ -z "$GH_TOKEN_VALUE" ]; then
+          echo "⚠️  Warning: GH_TOKEN is not set"
+          echo "Using GITHUB_TOKEN (automatically provided by GitHub Actions)"
+          GH_TOKEN_VALUE="${{ secrets.GITHUB_TOKEN }}"
+        else
+          echo "✅ GH_TOKEN is set"
+        fi
+        echo "GH_TOKEN length: ${#GH_TOKEN_VALUE}"
+        if [ -n "$GH_TOKEN_VALUE" ]; then
+          echo "GH_TOKEN first 4 chars: $(echo "$GH_TOKEN_VALUE" | cut -c1-4)..."
+          echo "GH_TOKEN last 4 chars: ...$(echo "$GH_TOKEN_VALUE" | rev | cut -c1-4 | rev)"
+        fi
+        echo "GH_TOKEN exists: $([ -n "$GH_TOKEN_VALUE" ] && echo 'yes' || echo 'no')"
+        echo ""
+        echo "📝 Full GH_TOKEN value (will be masked by GitHub):"
+        echo "$GH_TOKEN_VALUE"
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+    
     - name: Install dependencies
-      run: npm ci
+      run: |
+        echo '@acsbe:registry=https://npm.pkg.github.com' >> .npmrc
+        echo '//npm.pkg.github.com/:_authToken='${GH_TOKEN} >> .npmrc
+        echo "📦 Installing dependencies..."
+        npm ci
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
     
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
