--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -14,6 +14,30 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Debug GH_TOKEN
+      shell: bash
+      run: |
+        echo "🔍 Checking GH_TOKEN..."
+        GH_TOKEN_VALUE="${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}"
+        if [ -z "$GH_TOKEN_VALUE" ]; then
+          echo "⚠️  Warning: GH_TOKEN is not set"
+          echo "Using GITHUB_TOKEN (automatically provided by GitHub Actions)"
+          GH_TOKEN_VALUE="${{ secrets.GITHUB_TOKEN }}"
+        else
+          echo "✅ GH_TOKEN is set"
+        fi
+        echo "GH_TOKEN length: ${#GH_TOKEN_VALUE}"
+        if [ -n "$GH_TOKEN_VALUE" ]; then
+          echo "GH_TOKEN first 4 chars: $(echo "$GH_TOKEN_VALUE" | cut -c1-4)..."
+          echo "GH_TOKEN last 4 chars: ...$(echo "$GH_TOKEN_VALUE" | rev | cut -c1-4 | rev)"
+        fi
+        echo "GH_TOKEN exists: $([ -n "$GH_TOKEN_VALUE" ] && echo 'yes' || echo 'no')"
+        echo ""
+        echo "📝 Full GH_TOKEN value (will be masked by GitHub):"
+        echo "$GH_TOKEN_VALUE"
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+    
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
