--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,38 +22,74 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     
-    - name: Debug GH_TOKEN
+    - name: Debug Tokens
       shell: bash
       run: |
-        echo "🔍 Checking GH_TOKEN..."
-        GH_TOKEN_VALUE="${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}"
-        if [ -z "$GH_TOKEN_VALUE" ]; then
-          echo "⚠️  Warning: GH_TOKEN is not set"
-          echo "Using GITHUB_TOKEN (automatically provided by GitHub Actions)"
-          GH_TOKEN_VALUE="${{ secrets.GITHUB_TOKEN }}"
-        else
-          echo "✅ GH_TOKEN is set"
-        fi
-        echo "GH_TOKEN length: ${#GH_TOKEN_VALUE}"
-        if [ -n "$GH_TOKEN_VALUE" ]; then
-          echo "GH_TOKEN first 4 chars: $(echo "$GH_TOKEN_VALUE" | cut -c1-4)..."
-          echo "GH_TOKEN last 4 chars: ...$(echo "$GH_TOKEN_VALUE" | rev | cut -c1-4 | rev)"
-        fi
-        echo "GH_TOKEN exists: $([ -n "$GH_TOKEN_VALUE" ] && echo 'yes' || echo 'no')"
+        echo "🔍 Checking tokens for @acsbe package access..."
         echo ""
-        echo "📝 Full GH_TOKEN value (will be masked by GitHub):"
-        echo "$GH_TOKEN_VALUE"
+        
+        # Check ACSBE_TOKEN (preferred for @acsbe packages)
+        if [ -n "${{ secrets.ACSBE_TOKEN }}" ]; then
+          echo "✅ ACSBE_TOKEN is set (preferred for @acsbe packages)"
+          ACSBE_TOKEN_VALUE="${{ secrets.ACSBE_TOKEN }}"
+          echo "ACSBE_TOKEN length: ${#ACSBE_TOKEN_VALUE}"
+          echo "ACSBE_TOKEN first 4 chars: $(echo "$ACSBE_TOKEN_VALUE" | cut -c1-4)..."
+        else
+          echo "⚠️  ACSBE_TOKEN is not set"
+          echo "   → Create a PAT with 'read:packages' permission for @acsbe org"
+          echo "   → Add it as 'ACSBE_TOKEN' secret in repository settings"
+        fi
+        echo ""
+        
+        # Check GH_TOKEN
+        GH_TOKEN_VALUE="${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}"
+        if [ -n "${{ secrets.GH_TOKEN }}" ]; then
+          echo "✅ GH_TOKEN is set (custom token)"
+        elif [ -n "${{ secrets.GITHUB_TOKEN }}" ]; then
+          echo "⚠️  GH_TOKEN not set, using GITHUB_TOKEN (may not work for @acsbe packages)"
+        else
+          echo "❌ No tokens available!"
+        fi
+        
+        if [ -n "$GH_TOKEN_VALUE" ]; then
+          echo "GH_TOKEN length: ${#GH_TOKEN_VALUE}"
+          echo "GH_TOKEN first 4 chars: $(echo "$GH_TOKEN_VALUE" | cut -c1-4)..."
+        fi
+        echo ""
+        echo "📝 Token priority for @acsbe packages:"
+        echo "   1. ACSBE_TOKEN (if set) - Best for @acsbe org packages"
+        echo "   2. GH_TOKEN (if set) - May not have @acsbe access"
+        echo "   3. GITHUB_TOKEN (fallback) - Usually doesn't work for private org packages"
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+        ACSBE_TOKEN: ${{ secrets.ACSBE_TOKEN }}
     
     - name: Install dependencies
       run: |
+        echo "📦 Setting up npm registry for @acsbe packages..."
         echo '@acsbe:registry=https://npm.pkg.github.com' >> .npmrc
-        echo '//npm.pkg.github.com/:_authToken='${GH_TOKEN} >> .npmrc
+        
+        # Use ACSBE_TOKEN if available (for @acsbe org packages), otherwise fall back to GH_TOKEN
+        if [ -n "${{ secrets.ACSBE_TOKEN }}" ]; then
+          echo "✅ Using ACSBE_TOKEN for @acsbe packages"
+          echo '//npm.pkg.github.com/:_authToken='${{ secrets.ACSBE_TOKEN }} >> .npmrc
+        elif [ -n "${{ secrets.GH_TOKEN }}" ]; then
+          echo "⚠️  Using GH_TOKEN (may not have access to @acsbe packages)"
+          echo '//npm.pkg.github.com/:_authToken='${{ secrets.GH_TOKEN }} >> .npmrc
+        else
+          echo "⚠️  Using GITHUB_TOKEN (may not have access to @acsbe packages)"
+          echo '//npm.pkg.github.com/:_authToken='${{ secrets.GITHUB_TOKEN }} >> .npmrc
+        fi
+        
+        echo "📋 .npmrc contents:"
+        cat .npmrc | sed 's/_authToken=.*/_authToken=***MASKED***/'
+        
+        echo ""
         echo "📦 Installing dependencies..."
         npm ci
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+        ACSBE_TOKEN: ${{ secrets.ACSBE_TOKEN }}
     
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps chromium
