--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,131 +22,35 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     
-    - name: Debug Tokens
-      shell: bash
-      run: |
-        echo "🔍 Checking tokens for @acsbe package access..."
-        echo ""
-        
-        # Check ACSBE_TOKEN (preferred for @acsbe packages)
-        if [ -n "${{ secrets.ACSBE_TOKEN }}" ]; then
-          echo "✅ ACSBE_TOKEN is set (preferred for @acsbe packages)"
-          ACSBE_TOKEN_VALUE="${{ secrets.ACSBE_TOKEN }}"
-          echo "ACSBE_TOKEN length: ${#ACSBE_TOKEN_VALUE}"
-          echo "ACSBE_TOKEN first 4 chars: $(echo "$ACSBE_TOKEN_VALUE" | cut -c1-4)..."
-        else
-          echo "⚠️  ACSBE_TOKEN is not set"
-          echo "   → Create a PAT with 'read:packages' permission for @acsbe org"
-          echo "   → Add it as 'ACSBE_TOKEN' secret in repository settings"
-        fi
-        echo ""
-        
-        # Check GH_TOKEN
-        GH_TOKEN_VALUE="${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}"
-        if [ -n "${{ secrets.GH_TOKEN }}" ]; then
-          echo "✅ GH_TOKEN is set (custom token)"
-        elif [ -n "${{ secrets.GITHUB_TOKEN }}" ]; then
-          echo "⚠️  GH_TOKEN not set, using GITHUB_TOKEN (may not work for @acsbe packages)"
-        else
-          echo "❌ No tokens available!"
-        fi
-        
-        if [ -n "$GH_TOKEN_VALUE" ]; then
-          echo "GH_TOKEN length: ${#GH_TOKEN_VALUE}"
-          echo "GH_TOKEN first 4 chars: $(echo "$GH_TOKEN_VALUE" | cut -c1-4)..."
-        fi
-        echo ""
-        echo "📝 Token priority for @acsbe packages:"
-        echo "   1. ACSBE_TOKEN (if set) - Best for @acsbe org packages"
-        echo "   2. GH_TOKEN (if set) - May not have @acsbe access"
-        echo "   3. GITHUB_TOKEN (fallback) - Usually doesn't work for private org packages"
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
-        ACSBE_TOKEN: ${{ secrets.ACSBE_TOKEN }}
-    
     - name: Install local @acsbe/accessflow-sdk tarball
       run: |
-        echo "📦 Checking for local @acsbe/accessflow-sdk tarball..."
         if [ -f "acsbe-accessflow-sdk-1.0.0.tgz" ]; then
-          echo "✅ Found acsbe-accessflow-sdk-1.0.0.tgz"
-          echo "📊 File size: $(ls -lh acsbe-accessflow-sdk-1.0.0.tgz | awk '{print $5}')"
-          echo "📦 Installing local tarball package..."
           npm install ./acsbe-accessflow-sdk-1.0.0.tgz --save-dev
-          echo "✅ Local tarball installed successfully"
-        else
-          echo "⚠️  acsbe-accessflow-sdk-1.0.0.tgz not found - will try to install from registry"
         fi
     
     - name: Install dependencies
       run: |
-        echo "📦 Setting up npm registry for @acsbe packages..."
-        
-        # Priority 1: Check if .npmrc exists and has token - use it directly
-        if [ -f ".npmrc" ]; then
-          echo "📄 Found existing .npmrc file"
-          
-          # Check if it has @acsbe registry configured
-          if grep -q "@acsbe:registry" .npmrc; then
-            echo "✅ @acsbe registry already configured in .npmrc"
-          else
-            echo "ℹ️  Adding @acsbe registry to .npmrc"
+        # Priority 1: Use .npmrc if it exists and has token
+        if [ -f ".npmrc" ] && grep -q "//npm.pkg.github.com/:_authToken=" .npmrc; then
+          if ! grep -q "@acsbe:registry" .npmrc; then
             echo '@acsbe:registry=https://npm.pkg.github.com' >> .npmrc
           fi
-          
-          # Check if token exists
-          if grep -q "//npm.pkg.github.com/:_authToken=" .npmrc; then
-            echo "✅ Token found in .npmrc file - using it directly"
-            echo "⚠️  SECURITY WARNING: Token found in committed .npmrc file"
-            echo "   Consider using GitHub Secrets instead for better security"
-            
-            # Extract token for verification
-            NPMRC_TOKEN=$(grep '//npm.pkg.github.com/:_authToken=' .npmrc | sed 's/.*_authToken=//' | tr -d '\n' || echo "")
-            if [ -n "$NPMRC_TOKEN" ]; then
-              echo "   Token length: ${#NPMRC_TOKEN}"
-            fi
-            
-            echo ""
-            echo "📋 Using existing .npmrc (token masked):"
-            cat .npmrc | sed 's/_authToken=.*/_authToken=***MASKED***/'
-            echo ""
-            echo "📦 Installing remaining dependencies with .npmrc token..."
-            npm ci
-            exit 0
-          else
-            echo "⚠️  .npmrc exists but no token found - will use secrets"
+          npm ci
+        else
+          # Priority 2: Use secrets if .npmrc doesn't have token
+          if [ ! -f ".npmrc" ] || ! grep -q "@acsbe:registry" .npmrc; then
+            echo '@acsbe:registry=https://npm.pkg.github.com' > .npmrc
           fi
-        else
-          echo "ℹ️  .npmrc file not found - will create one with token from secrets"
+          
+          if [ -n "${{ secrets.ACSBE_TOKEN }}" ]; then
+            echo '//npm.pkg.github.com/:_authToken='${{ secrets.ACSBE_TOKEN }} >> .npmrc
+          elif [ -n "${{ secrets.GH_TOKEN }}" ]; then
+            echo '//npm.pkg.github.com/:_authToken='${{ secrets.GH_TOKEN }} >> .npmrc
+          else
+            echo '//npm.pkg.github.com/:_authToken='${{ secrets.GITHUB_TOKEN }} >> .npmrc
+          fi
+          npm ci
         fi
-        
-        # Priority 2: Use secrets if .npmrc doesn't have token
-        echo ""
-        echo "🔑 Setting up .npmrc with token from secrets..."
-        
-        # Create/update .npmrc with registry
-        if [ ! -f ".npmrc" ] || ! grep -q "@acsbe:registry" .npmrc; then
-          echo '@acsbe:registry=https://npm.pkg.github.com' > .npmrc
-        fi
-        
-        # Determine which token to use (priority: ACSBE_TOKEN > GH_TOKEN > GITHUB_TOKEN)
-        if [ -n "${{ secrets.ACSBE_TOKEN }}" ]; then
-          echo "✅ Using ACSBE_TOKEN secret for @acsbe packages"
-          echo '//npm.pkg.github.com/:_authToken='${{ secrets.ACSBE_TOKEN }} >> .npmrc
-        elif [ -n "${{ secrets.GH_TOKEN }}" ]; then
-          echo "⚠️  Using GH_TOKEN secret (may not have access to @acsbe packages)"
-          echo '//npm.pkg.github.com/:_authToken='${{ secrets.GH_TOKEN }} >> .npmrc
-        else
-          echo "⚠️  Using GITHUB_TOKEN (may not have access to @acsbe packages)"
-          echo '//npm.pkg.github.com/:_authToken='${{ secrets.GITHUB_TOKEN }} >> .npmrc
-        fi
-        
-        echo ""
-        echo "📋 .npmrc contents (token masked):"
-        cat .npmrc | sed 's/_authToken=.*/_authToken=***MASKED***/'
-        
-        echo ""
-        echo "📦 Installing remaining dependencies..."
-        npm ci
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
         ACSBE_TOKEN: ${{ secrets.ACSBE_TOKEN }}
