--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-code-section-lib": "^0.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
