--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@acsbe/accessflow-sdk": "file:acsbe-accessflow-sdk-1.0.0.tgz",
+    "@acsbe/accessflow-sdk": "file:acsbe-accessflow-sdk-1.0.0-dev2.tgz",
     "@playwright/test": "^1.56.1",
+    "dotenv": "^17.2.3",
     "gh-pages": "^6.2.0",
     "playwright": "^1.56.1"
   },
