Fix: Restore environment block required by deploy-pages action
- actions/deploy-pages@v4 requires environment configuration
- Need to configure GitHub Pages settings instead

--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -82,6 +82,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: 📥 Checkout code
@@ -116,7 +120,7 @@ jobs:
       - name: ✅ Deployment Summary
         run: |
           echo "🎉 Deployment successful!"
-          echo "📍 URL: https://${{ github.repository_owner }}.github.io/"
+          echo "📍 URL: ${{ steps.deployment.outputs.page_url }}"
           echo "🕒 Deployed at: $(date)"
 
   accessibility-summary:
