Enable deployment from multiple branches
- Deploy from: main, master, develop, and dev/* branches
- Allows testing deployments from feature branches
- All branches still run full test suite

--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -81,7 +81,14 @@ jobs:
     name: Deploy to GitHub Pages
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    # Deploy from main, master, develop, and dev branches
+    if: |
+      github.event_name == 'push' && (
+        github.ref == 'refs/heads/main' ||
+        github.ref == 'refs/heads/master' ||
+        github.ref == 'refs/heads/develop' ||
+        startsWith(github.ref, 'refs/heads/dev/')
+      )
 
     environment:
       name: github-pages
