--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -13,7 +13,7 @@ concurrency:
   cancel-in-progress: true
 
 permissions:
-  contents: read
+  contents: write  # Required for pushing to gh-pages branch
   pages: write
   id-token: write
 
@@ -90,10 +90,6 @@ jobs:
         startsWith(github.ref, 'refs/heads/dev/')
       )
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
@@ -107,27 +103,100 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
-      - name: 🔨 Build application
-        run: npm run build
+      - name: 🎯 Determine branch path
+        id: branch-path
+        run: |
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          
+          # Main/master deploy to root
+          if [[ "$BRANCH_NAME" == "main" ]] || [[ "$BRANCH_NAME" == "master" ]]; then
+            echo "path=." >> $GITHUB_OUTPUT
+            echo "public_url=/" >> $GITHUB_OUTPUT
+            echo "deploy_name=production" >> $GITHUB_OUTPUT
+          else
+            # Other branches deploy to subdirectories
+            # Clean branch name (replace / with -)
+            CLEAN_BRANCH=$(echo "$BRANCH_NAME" | sed 's/\//-/g')
+            echo "path=$CLEAN_BRANCH" >> $GITHUB_OUTPUT
+            echo "public_url=/$CLEAN_BRANCH/" >> $GITHUB_OUTPUT
+            echo "deploy_name=$CLEAN_BRANCH" >> $GITHUB_OUTPUT
+          fi
+          
+          echo "Branch: $BRANCH_NAME"
+          echo "Deploy path: $(cat $GITHUB_OUTPUT | grep path= | cut -d= -f2)"
+          echo "Public URL: $(cat $GITHUB_OUTPUT | grep public_url= | cut -d= -f2)"
+
+      - name: 🔨 Build application with branch-specific path
+        run: |
+          if [[ "${{ steps.branch-path.outputs.path }}" != "." ]]; then
+            PUBLIC_URL="${{ steps.branch-path.outputs.public_url }}" npm run build
+          else
+            npm run build
+          fi
         env:
           CI: true
 
-      - name: 📄 Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: 📤 Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: 📥 Checkout gh-pages branch
+        uses: actions/checkout@v4
         with:
-          path: './build'
+          ref: gh-pages
+          path: gh-pages-content
+        continue-on-error: true
+
+      - name: 📂 Prepare deployment directory
+        run: |
+          # Create or use existing gh-pages directory
+          mkdir -p gh-pages-deploy
+          
+          # Copy existing content if gh-pages branch exists
+          if [ -d "gh-pages-content" ]; then
+            cp -r gh-pages-content/* gh-pages-deploy/ || true
+            rm -rf gh-pages-content
+          fi
+          
+          # Create/update branch-specific directory
+          if [[ "${{ steps.branch-path.outputs.path }}" == "." ]]; then
+            # Main branch: deploy to root (but preserve other branch directories)
+            find gh-pages-deploy -maxdepth 1 -type f -delete
+            cp -r build/* gh-pages-deploy/
+          else
+            # Other branches: deploy to subdirectory
+            mkdir -p gh-pages-deploy/${{ steps.branch-path.outputs.path }}
+            rm -rf gh-pages-deploy/${{ steps.branch-path.outputs.path }}/*
+            cp -r build/* gh-pages-deploy/${{ steps.branch-path.outputs.path }}/
+          fi
+          
+          # Create index file listing all branches
+          cat > gh-pages-deploy/branches.html <<EOF
+          <!DOCTYPE html>
+          <html><head><title>Branch Deployments</title></head>
+          <body><h1>Available Deployments</h1><ul>
+          $(find gh-pages-deploy -mindepth 1 -maxdepth 1 -type d -exec basename {} \; | sed 's/^/<li><a href="\/{}\/index.html">{}🔗<\/a><\/li>/')
+          <li><a href="/index.html">main (production) 🏠</a></li>
+          </ul></body></html>
+          EOF
 
       - name: 🚀 Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./gh-pages-deploy
+          publish_branch: gh-pages
+          force_orphan: false
+          keep_files: false
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'Deploy ${{ steps.branch-path.outputs.deploy_name }} from ${{ github.sha }}'
 
       - name: ✅ Deployment Summary
         run: |
           echo "🎉 Deployment successful!"
-          echo "📍 URL: ${{ steps.deployment.outputs.page_url }}"
+          if [[ "${{ steps.branch-path.outputs.path }}" == "." ]]; then
+            echo "📍 Production URL: https://${{ github.repository_owner }}.github.io/"
+          else
+            echo "📍 Branch URL: https://${{ github.repository_owner }}.github.io/${{ steps.branch-path.outputs.path }}/"
+          fi
+          echo "📋 All branches: https://${{ github.repository_owner }}.github.io/branches.html"
           echo "🕒 Deployed at: $(date)"
 
   accessibility-summary:
