--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
-    "**/node_modules": true,
+    "**/node_modules": false,
     "**/dist": true,
     "**/build": true,
     "**/test-results": true,
