Refactor navigation components to improve accessibility by replacing anchor tags with button elements for better screen reader compatibility. Update MCP configuration to include new flow-mcp server settings and remove outdated SDK packages.

--- a/.mcp-config.json
+++ b/.mcp-config.json
@@ -2,14 +2,10 @@
   "mcpServers": {
     "playwright-mcp": {
       "command": "npx",
-      "args": [
-        "-y",
-        "@playwright/mcp"
-      ],
+      "args": ["-y", "@playwright/mcp"],
       "env": {
         "BROWSER": "chromium"
       }
     }
   }
 }
-
