Update CI workflow to use new environment variable for API key and enhance Python test suite with report generation and SDK initialization improvements.

--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -129,7 +129,7 @@ jobs:
         run: pytest --junitxml=test-results/results.xml
         env:
           CI: true
-          ACCESSFLOW_API_KEY: ${{ secrets.ACCESSFLOW_API_KEY }}
+          AF_Python_Package_Key: ${{ secrets.AF_Python_Package_Key }}
 
       - name: Upload Python Test Results
         uses: actions/upload-artifact@v4
