--- a/.github/workflows/ci-test-deploy.yml
+++ b/.github/workflows/ci-test-deploy.yml
@@ -106,7 +106,8 @@ jobs:
           python-version: '3.12'
 
       - name: Install Python dependencies
-        run: pip install -r python-tests/requirements.txt
+        working-directory: python-tests
+        run: pip install -r requirements.txt
 
       - name: Install Playwright Browsers (Python)
         run: python -m playwright install --with-deps chromium
