Update AccessFlow SDK references in tests and package files to reflect new group ID and enhance npm command compatibility for Windows environments.

--- a/java-tests/pom.xml
+++ b/java-tests/pom.xml
@@ -42,7 +42,7 @@
 
         <!-- AccessFlow Java SDK (local JAR) -->
         <dependency>
-            <groupId>com.accessflow</groupId>
+            <groupId>com.acsbe</groupId>
             <artifactId>accessflow-sdk</artifactId>
             <version>1.0.1</version>
             <scope>system</scope>
